--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^8.4.1",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
+    "gh-pages": "^4.0.0",
     "jest": "^27.4.4",
     "nuxt-windicss": "^2",
     "vue-jest": "^3.0.4"
